@@ -71,13 +71,11 @@ jobs:
         run: |
           printf "[core-debug]\nInclude = /etc/pacman.d/mirrorlist\n[extra-debug]\nInclude = /etc/pacman.d/mirrorlist\n[multilib-debug]\nInclude = /etc/pacman.d/mirrorlist" >> /etc/pacman.conf
           printf 'Server = https://geo.mirror.pkgbuild.com/$repo/os/$arch\n%s\n' "$(cat /etc/pacman.d/mirrorlist)" > /etc/pacman.d/mirrorlist
-      - name: System information
-        run: lscpu
       - name: Install dependencies
-        run: pacman --noconfirm -Syu alsa-lib base-devel cairo carla git glibc-debug hicolor-icon-theme jack jq libglvnd libsndfile libx11 libxrandr php valgrind gdb
+        run: pacman --noconfirm -Syu alsa-lib base-devel cairo carla git glibc-debug hicolor-icon-theme jack jq libglvnd libsndfile libx11 libxrandr php valgrind
       - uses: actions/checkout@v3
       - name: Configure project
-        run: gcc --version && make config STRICT=1 DEBUG=1 VERBOSE=1 ASAN=1 FEATURES='clap jack ladspa lv2 vst2' PREFIX=/usr
+        run: make config STRICT=1 DEBUG=1 VERBOSE=1 ASAN=1 FEATURES='clap jack ladspa lv2 vst2' PREFIX=/usr
       - name: Fetch project dependencies
         run: make fetch
       - name: Build project
@@ -90,19 +88,19 @@ jobs:
         run: |
           for _plugin in $(jq -r '.plugins[].ladspa_label | select( . != null )' ${{ env.PLUGIN_METADATA }}); do \
             export ASAN_OPTIONS=verify_asan_link_order=0; \
-            echo -e "r\nt a a bt\ndisplay /40i \$pc\ni r\ndisassemble 'lsp::avx512::gate_x1_curve'\n" | gdb --args /usr/lib/carla/carla-bridge-native ladspa /usr/lib/ladspa/lsp-*.so "${_plugin}"; \
+            /usr/lib/carla/carla-bridge-native ladspa /usr/lib/ladspa/lsp-*.so "${_plugin}" 1>/dev/null; \
           done
       - name: LV2 runtime checks
         run: |
           for _plugin in $(jq -r '.plugins[].lv2_uri | select( . != null )' ${{ env.PLUGIN_METADATA }}); do \
             export ASAN_OPTIONS=verify_asan_link_order=0; \
-            echo -e "r\nt a a bt\ndisplay /40i \$pc\ni r\ndisassemble 'lsp::avx512::gate_x1_curve'\n" | gdb --args /usr/lib/carla/carla-bridge-native lv2 "" "${_plugin}"; \
+            /usr/lib/carla/carla-bridge-native lv2 "" "${_plugin}" 1>/dev/null; \
           done
       - name: VST2 runtime checks
         run: |
           for _binary in $(ls /usr/lib/vst/lsp-plugins/*.so | grep -v /lsp-plugins-); do \
             export ASAN_OPTIONS=verify_asan_link_order=0; \
-            echo -e "r\nt a a bt\ndisplay /40i \$pc\ni r\ndisassemble 'lsp::avx512::gate_x1_curve'\n" | gdb --args /usr/lib/carla/carla-bridge-native vst2 "${_binary}" ""; \
+            /usr/lib/carla/carla-bridge-native vst2 "${_binary}" "" 1>/dev/null; \
           done
 
   arch_linux_valgrind:
